kustomize/overlays/istio-prometheus/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: silly-demo
spec:
  replicas: 5
  strategy:
    canary:
      canaryService: silly-demo-canary
      stableService: silly-demo-stable
      trafficRouting:
        istio:
          virtualServices:
            - name: silly-demo-1
              routes:
                - primary
            - name: silly-demo-2
              routes:
                - secondary
      analysis:
        templates:
          - templateName: success-rate
            clusterScope: true
        startingStep: 2
        args:
          - name: service-name
            value: silly-demo-canary.a-team.svc.cluster.local
      steps:
        - setWeight: 20
        - pause: {duration: 300}
        - setWeight: 40
        - pause: {duration: 300}
        - setWeight: 60
        - pause: {duration: 300}
        - setWeight: 80
        - pause: {duration: 300}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: silly-demo
  workloadRef:
    apiVersion: apps/v1
    kind: Deployment
    name: silly-demo
