kustomize/overlays/istio-prometheus/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: silly-demo-canary
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: silly-demo
---
apiVersion: v1
kind: Service
metadata:
  name: silly-demo-stable
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: silly-demo
